Change Design in Step A

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,15 +60,13 @@
         android:id="@+id/tv_help"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/const_border_light"
+        android:background="@drawable/box_bg"
         android:fontFamily="@font/iran_sans"
-        android:layout_margin="@dimen/size_4_dp"
-        android:paddingLeft="@dimen/size_12_dp"
-        android:paddingRight="@dimen/size_12_dp"
-        android:paddingBottom="@dimen/size_4_dp"
+        android:padding="@dimen/size_8_dp"
+        android:layout_margin="@dimen/size_8_dp"
         android:text="@string/text_help_one"
-        android:textColor="@color/color_red"
-        android:textSize="@dimen/text_size_10_sp"
+        android:textColor="@color/grey_900"
+        android:textSize="@dimen/text_size_12_sp"
         app:layout_constraintBottom_toTopOf="@id/fragment_container"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -79,6 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/colorWhite"
+        android:layout_margin="@dimen/size_8_dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
