--- a/app/src/main/res/layout/dialog_send_order.xml
+++ b/app/src/main/res/layout/dialog_send_order.xml
@@ -123,7 +123,7 @@
             android:layout_marginEnd="@dimen/dimen_dp_tiny"
             android:fontFamily="@font/iran_sans_medium"
             android:gravity="end"
-            android:text="آبــی"
+            android:text="آبی"
             android:textColor="@color/colorBlackStep_1"
             android:textSize="@dimen/dimen_sp_small"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -150,7 +150,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimen_dp_small"
             android:fontFamily="@font/iran_sans_medium"
-            android:text="رنـگ pvc"
+            android:text="رنگ pvc"
             android:textColor="@color/colorBlackStep_4"
             android:textSize="@dimen/dimen_sp_small"
             app:layout_constraintLeft_toRightOf="@+id/tv_pvc_color"
