--- a/app/src/main/res/drawable/box_for_edits.xml
+++ b/app/src/main/res/drawable/box_for_edits.xml
@@ -2,14 +2,19 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
+    <corners
+        android:bottomLeftRadius = "@dimen/size_4_dp"
+        android:bottomRightRadius = "@dimen/size_4_dp"
+        android:topLeftRadius = "@dimen/size_4_dp"
+        android:topRightRadius = "@dimen/size_4_dp" />
 
     <stroke
         android:width = "0.1dp"
-        android:color = "#ABAFADAD" />
+        android:color = "@color/grey_300" />
 
     <padding
-        android:bottom = "4dp"
-        android:left = "4dp"
-        android:right = "4dp"
-        android:top = "4dp" />
+        android:bottom = "@dimen/size_8_dp"
+        android:left = "@dimen/size_8_dp"
+        android:right = "@dimen/size_8_dp"
+        android:top = "@dimen/size_8_dp" />
 </shape>
