--- a/app/src/main/res/layout/dialog_product_team.xml
+++ b/app/src/main/res/layout/dialog_product_team.xml
@@ -74,7 +74,7 @@
         android:layout_marginBottom="@dimen/dimen_dp_small"
         android:fontFamily="@font/iran_sans_medium"
         android:gravity="center"
-        android:text="..::.. توسعـه دهندگان ..::.."
+        android:text="..::.. توسعه دهندگان ..::.."
         android:textColor="@color/colorBlackStep_5"
         android:textSize="@dimen/dimen_sp_small"
         app:layout_constraintLeft_toLeftOf="parent"
