--- a/app/src/main/res/layout/template_order_list.xml
+++ b/app/src/main/res/layout/template_order_list.xml
@@ -4,10 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/size_4_dp"
-    android:background="@drawable/const_border_light"
+    android:layout_margin="@dimen/size_8_dp"
+    android:background="@drawable/box_bg"
     android:layoutDirection="rtl"
-    android:padding="@dimen/dimen_dp_small">
+    android:padding="@dimen/size_8_dp">
 
 
     <androidx.appcompat.widget.AppCompatImageView
