--- a/app/src/main/res/layout/template_pre_order_row.xml
+++ b/app/src/main/res/layout/template_pre_order_row.xml
@@ -153,6 +153,38 @@
 
         </LinearLayout>
 
+
+        <LinearLayout
+            android:id="@+id/linear_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/linear_size">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:fontFamily="@font/iran_sans_medium"
+                android:gravity="end"
+                android:text="توضیحات"
+                android:textColor="@color/colorBlackStep_1"
+                android:textSize="@dimen/text_size_10_sp" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_desc"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/size_4_dp"
+                android:layout_weight="5"
+                android:fontFamily="@font/iran_sans_bold"
+                android:text="[1طول][2عرض]"
+                android:textColor="@color/color_brown"
+                android:textSize="@dimen/text_size_10_sp" />
+
+        </LinearLayout>
+
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
