--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -39,7 +39,7 @@
         android:fontFamily="@font/iran_sans_bold"
         android:textSize="@dimen/dimen_sp_tiny"
         android:padding="@dimen/dimen_dp_small"
-        android:text="ورژن : 1.0.0"
+        android:text="نسخه : 1.0.0"
         android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
